RESOLVED FIXED306977
REGRESSION(305618@main): [iOS] Swipe gesture fails to reliably trigger scroll over certain HTML content in Mail
https://bugs.webkit.org/show_bug.cgi?id=306977
Summary REGRESSION(305618@main): [iOS] Swipe gesture fails to reliably trigger scroll...
Abrar Rahman Protyasha
Reported 2026-02-04 12:45:50 PST
Attachments
Abrar Rahman Protyasha
Comment 1 2026-02-04 12:56:46 PST
EWS
Comment 2 2026-02-04 16:43:02 PST
Committed 306820@main (2a02830783a0): <https://commits.webkit.org/306820@main> Reviewed commits have been landed. Closing PR #57879 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.