Cherry-pick 2a02830783a0. rdar://169665534

REGRESSION(305618@main): [iOS] Swipe gesture fails to reliably trigger scroll over certain HTML content in Mail
    https://bugs.webkit.org/show_bug.cgi?id=306977
    rdar://169511014

    Reviewed by Simon Fraser.

    Our adoption of `setDecelerationTrackingBehavior` broke scrolling during
    an existing momentum phase on certain HTML content in Mail.app.

    This commit is a simple revert of 305618@main, unfortunately bringing
    back webkit.org/b/302754.

    * Source/WTF/wtf/PlatformHave.h:
    * Source/WebKit/Configurations/AllowedSPI-legacy.toml:
    * Source/WebKit/Configurations/AllowedSPI.toml:
    * Source/WebKit/Platform/spi/ios/UIKitSPI.h:
    * Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
    (-[WKWebView _setupScrollAndContentViews]):
    * Source/WebKit/UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.mm:
    (WebKit::ScrollingTreeScrollingNodeDelegateIOS::commitStateAfterChildren):

    Canonical link: https://commits.webkit.org/306820@main

Identifier: 305413.262@safari-7624-branch